--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,10 +12,10 @@
         android:layout_height="wrap_content"
         android:hint="@string/search"
         android:padding="@dimen/ff_til_padding"
+        app:counterEnabled="true"
         app:endIconCheckable="true"
         app:endIconDrawable="@drawable/ic_baseline_search_24"
         app:endIconMode="custom"
-        app:counterEnabled="true"
         app:layout_constraintBottom_toTopOf="@id/ff_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,5 +40,13 @@
         app:layout_constraintTop_toBottomOf="@id/ff_til"
         app:layout_constraintVertical_chainStyle="packed"
         tools:listitem="@layout/ff_item" />
+
+    <TextView
+        android:id="@+id/ff_test_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ff_rv" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
