--- a/app/src/main/res/layout/ff_item.xml
+++ b/app/src/main/res/layout/ff_item.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginStart="4dp"
     android:layout_marginEnd="4dp"
-    android:backgroundTint="@color/space_grey"
+    android:backgroundTint="@color/ff_item_card_background"
     android:elevation="4dp"
     app:cardCornerRadius="8dp"
     app:cardUseCompatPadding="true">
