--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="space_grey">#D9E6E8</color>
+    <color name="ff_item_card_background">#D9E6E8</color>
+    <color name="ff_text_input_layout_background">#C6C6C6</color>
+
 </resources>
