измененно поведение ff_til и ff_rv

--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -13,12 +13,12 @@
         android:padding="@dimen/ff_til_padding"
         app:counterEnabled="true"
         app:endIconCheckable="true"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:hint="@string/ff_til_hint_text"
         app:placeholderText="@string/ff_til_place_holder_text"
         app:helperText="@string/ff_til_helper_text"
         app:counterMaxLength="@integer/ff_til_input_max_counter"
         app:endIconDrawable="@drawable/ic_baseline_search_24"
-        android:background="@color/ff_text_input_layout_background"
         app:endIconMode="custom"
         app:layout_constraintBottom_toTopOf="@id/ff_rv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -31,6 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:backgroundTintMode="screen"
             android:maxLength="@integer/ff_tiet_input_max_counter" />
     </com.google.android.material.textfield.TextInputLayout>
 
