--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="ff_item_card_background">#D9E6E8</color>
-    <color name="ff_text_input_layout_background">#C6C6C6</color>
+    <color name="ff_til_hint_error">#9F0606</color>
 
 </resources>
