--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="ff_til_padding">8dp</dimen>
+    <dimen name="ff_rv_item_card_margin_start_end">4dp</dimen>
+    <dimen name="ff_rv_item_card_elevation">4dp</dimen>
+    <dimen name="ff_rv_item_card_corner_radius">4dp</dimen>
+    <dimen name="ff_rv_item_tv_margin">8dp</dimen>
+    <dimen name="ff_item_tv_text_size">24sp</dimen>
 </resources>
