CardView для TextInputLayout

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,4 +6,8 @@
     <dimen name="ff_rv_item_card_corner_radius">4dp</dimen>
     <dimen name="ff_rv_item_tv_margin">8dp</dimen>
     <dimen name="ff_item_tv_text_size">24sp</dimen>
+    <dimen name="ff_til_layout_margin">4dp</dimen>
+    <dimen name="ff_cv_layout_margin">4dp</dimen>
+    <dimen name="ff_cv_elevation">16dp</dimen>
+    <dimen name="ff_cv_card_corner_radius">16dp</dimen>
 </resources>
