--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -6,34 +6,47 @@
     android:layout_height="match_parent"
     tools:context=".presentation.firstfragment.FirstFragment">
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/ff_til"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/ff_cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="@string/ff_til_hint_text"
-        android:padding="@dimen/ff_til_padding"
-        app:counterEnabled="true"
-        app:counterMaxLength="@integer/ff_til_input_max_counter"
-        app:endIconCheckable="true"
-        app:startIconDrawable="@drawable/ic_baseline_record_voice_over_24"
-        app:endIconDrawable="@drawable/ic_baseline_search_24"
-        app:endIconMode="custom"
+        android:layout_margin="@dimen/ff_cv_layout_margin"
+        android:backgroundTint="@color/ff_item_card_background"
+        android:elevation="@dimen/ff_cv_elevation"
+        app:cardCornerRadius="@dimen/ff_cv_card_corner_radius"
+        app:cardUseCompatPadding="true"
         app:layout_constraintBottom_toTopOf="@id/ff_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_chainStyle="packed"
-        app:placeholderText="@string/ff_til_place_holder_text">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/ff_tiet"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/ff_til"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:backgroundTintMode="screen"
-            android:inputType="textNoSuggestions"
-            android:maxLength="@integer/ff_tiet_input_max_counter" />
-    </com.google.android.material.textfield.TextInputLayout>
+            android:layout_gravity="start"
+            android:layout_margin="@dimen/ff_til_layout_margin"
+            android:hint="@string/ff_til_hint_text"
+            android:padding="@dimen/ff_til_padding"
+            app:counterEnabled="true"
+            app:counterMaxLength="@integer/ff_til_input_max_counter"
+            app:endIconCheckable="true"
+            app:endIconDrawable="@drawable/ic_baseline_search_24"
+            app:endIconMode="custom"
+            app:placeholderText="@string/ff_til_place_holder_text"
+            app:startIconDrawable="@drawable/ic_baseline_record_voice_over_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/ff_tiet"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:backgroundTintMode="screen"
+                android:inputType="textNoSuggestions"
+                android:maxLength="@integer/ff_tiet_input_max_counter" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+    </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ff_rv"
@@ -43,7 +56,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ff_til"
+        app:layout_constraintTop_toBottomOf="@id/ff_cv"
         app:layout_constraintVertical_chainStyle="packed"
         tools:listitem="@layout/ff_item" />
 
