--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:padding="@dimen/ff_constraint_layout_padding"
     android:layout_height="match_parent"
     tools:context=".presentation.firstfragment.FirstFragment">
 
@@ -10,7 +11,6 @@
         android:id="@+id/ff_cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/ff_cv_layout_margin"
         android:backgroundTint="@color/ff_item_card_background"
         android:elevation="@dimen/ff_cv_elevation"
         app:cardCornerRadius="@dimen/ff_cv_card_corner_radius"
