--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,13 @@
     <color name="ff_item_card_background">#D9E6E8</color>
     <color name="ff_til_hint_error">#9F0606</color>
 
+    <color name="primaryColor">#37464f</color>
+    <color name="primaryLightColor">#62717b</color>
+    <color name="primaryDarkColor">#101f27</color>
+    <color name="secondaryColor">#90a4ae</color>
+    <color name="secondaryLightColor">#c1d5e0</color>
+    <color name="secondaryDarkColor">#62757f</color>
+    <color name="primaryTextColor">#ffffff</color>
+    <color name="secondaryTextColor">#D8000000</color>
+
 </resources>
