--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,7 +22,7 @@
 
     <style name="FfTietStyle" parent="">
         <item name="android:backgroundTintMode">screen</item>
-        <item name="android:inputType">textNoSuggestions</item>
+        <item name="android:inputType">text</item>
         <item name="android:textCursorDrawable">@drawable/cursor</item>
         <item name="android:maxLength">@integer/ff_tiet_input_max_counter</item>
     </style>
