--- a/app/src/main/res/layout/ff_item.xml
+++ b/app/src/main/res/layout/ff_item.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:backgroundTint="@color/ff_item_card_background"
-    android:elevation="@dimen/ff_rv_item_card_elevation"
-    app:cardCornerRadius="@dimen/ff_rv_item_card_corner_radius"
+    android:elevation="@dimen/ff_item_card_elevation"
+    app:cardCornerRadius="@dimen/ff_item_card_corner_radius"
     app:cardUseCompatPadding="true">
 
     <TextView
@@ -14,9 +14,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_margin="@dimen/ff_rv_item_tv_margin"
+        android:layout_margin="@dimen/ff_item_tv_margin"
         android:textColor="@color/secondaryTextColor"
-        android:textSize="@dimen/ff_rv_item_tv_text_size"
+        android:textSize="@dimen/ff_item_tv_text_size"
         tools:text="Test text" />
 
 </androidx.cardview.widget.CardView>
