--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
 
     <dimen name="ff_item_card_elevation">4dp</dimen>
     <dimen name="ff_item_card_corner_radius">16dp</dimen>
+    <dimen name="ff_item_card_margin_start_end">4dp</dimen>
 
     <dimen name="ff_item_tv_margin">8dp</dimen>
     <dimen name="ff_item_tv_text_size">24sp</dimen>
