--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -12,9 +12,7 @@
         android:id="@+id/ff_cv"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/secondaryLightColor"
-        android:elevation="@dimen/ff_cv_elevation"
-        app:cardCornerRadius="@dimen/ff_cv_card_corner_radius"
+        style="@style/FfCvStyle"
         app:layout_constraintBottom_toTopOf="@id/ff_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
