--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -10,9 +10,9 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/ff_cv"
+        style="@style/ff_cv_style"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="@style/ff_cv_style"
         app:layout_constraintBottom_toTopOf="@id/ff_rv"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -20,16 +20,16 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/ff_til"
+            style="?attrFfTil"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="start"
-            style="@style/ff_til_style">
+            android:layout_gravity="start">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/ff_tiet"
+                style="@style/ff_tiet_style"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                style="@style/ff_tiet_style" />
+                android:layout_height="wrap_content" />
         </com.google.android.material.textfield.TextInputLayout>
 
     </androidx.cardview.widget.CardView>
