--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -8,12 +8,12 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="secondaryColor">#90a4ae</color>
-    <color name="secondaryLightColor">#EBF7FF</color>
-    <color name="secondaryDarkColor">#62757f</color>
+    <color name="secondaryColor">#37464f</color>
+    <color name="secondaryLightColor">#62717b</color>
+    <color name="secondaryDarkColor">#101f27</color>
 
-    <color name="secondaryTextColor">#BF000000</color>
+    <color name="secondaryTextColor">#ffffff</color>
 
-    <color name="secondaryBackgroundColor">#D2E0E8</color>
+    <color name="secondaryBackgroundColor">#2C2E30</color>
 
 </resources>
