--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
+    <style name="ff_view_style" parent="">
+        <item name="android:background">@color/secondaryBackgroundColor</item>
+        <item name="android:padding">@dimen/ff_constraint_layout_padding</item>
+    </style>
+
+    <style name="ff_cv_style" parent="">
+        <item name="android:backgroundTint">@color/secondaryLightColor</item>
+        <item name="android:elevation">@dimen/ff_cv_elevation</item>
+        <item name="cardCornerRadius">@dimen/ff_cv_card_corner_radius</item>
+    </style>
+
     <style name="ff_til_style" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="android:layout_margin">@dimen/ff_til_layout_margin</item>
         <item name="android:hint">@string/ff_til_hint_text</item>
@@ -29,12 +40,6 @@
         <item name="android:textCursorDrawable">@drawable/cursor</item>
     </style>
 
-    <style name="ff_cv_style" parent="">
-        <item name="android:backgroundTint">@color/secondaryLightColor</item>
-        <item name="android:elevation">@dimen/ff_cv_elevation</item>
-        <item name="cardCornerRadius">@dimen/ff_cv_card_corner_radius</item>
-    </style>
-
     <style name="ff_item_cv_style" parent="">
         <item name="android:backgroundTint">@color/secondaryLightColor</item>
         <item name="android:layout_marginStart">@dimen/ff_item_card_margin_start_end</item>
@@ -48,10 +53,6 @@
         <item name="android:layout_margin">@dimen/ff_item_tv_margin</item>
         <item name="android:textColor">@color/secondaryTextColor</item>
         <item name="android:textSize">@dimen/ff_item_tv_text_size</item>
-    </style>
-
-    <style name="ff_item_tv_style.dark_theme">
-        <item name="android:textColor">@color/secondaryTextColor</item>
     </style>
 
 </resources>
