--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,6 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="attrFfView">@style/ff_view_style</item>
+        <item name="attrFfCv">@style/ff_cv_style</item>
         <item name="attrFfTil">@style/ff_til_style</item>
+        <item name="attrFfTiet">@style/ff_tiet_style</item>
+        <item name="attrFfItemCv">@style/ff_item_cv_style</item>
+        <item name="attrFfItemTv">@style/ff_item_tv_style</item>
     </style>
 </resources>
