изменены цвета navigationBarColor, windowBackground

--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,16 +2,18 @@
     <!-- Base application theme. -->
     <style name="Theme.GB_PProg" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/test_red</item>
+        <item name="colorPrimaryVariant">@color/secondaryBackgroundColor</item>
+        <item name="colorOnPrimary">@color/test_red</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorSecondary">@color/test_red</item>
+        <item name="colorSecondaryVariant">@color/test_red</item>
+        <item name="colorOnSecondary">@color/test_red</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor">@color/secondaryDarkColor</item>
+        <item name="android:windowBackground">@color/secondaryBackgroundColor</item>
         <item name="attrFfView">@style/ff_view_style.dark_theme</item>
         <item name="attrFfCv">@style/ff_cv_style.dark_theme</item>
         <item name="attrFfTil">@style/ff_til_style.dark_theme</item>
