--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -7,6 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="test_red">#FF0000</color>
 
     <color name="secondaryColor">#37464f</color>
     <color name="secondaryLightColor">#62717b</color>
