--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,11 +2,11 @@
     <!-- Base application theme. -->
     <style name="Theme.GB_PProg" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/test_red</item>
+        <item name="colorPrimary">@color/test_yellow</item>
         <item name="colorPrimaryVariant">@color/secondaryBackgroundColor</item>
         <item name="colorOnPrimary">@color/test_red</item>
         <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/test_red</item>
+        <item name="colorSecondary">@color/test_green</item>
         <item name="colorSecondaryVariant">@color/test_red</item>
         <item name="colorOnSecondary">@color/test_red</item>
         <!-- Status bar color. -->
