--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,13 +8,15 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="test_red">#FF0000</color>
+    <color name="test_yellow">#F6FF00</color>
+    <color name="test_green">#26FF00</color>
 
     <color name="secondaryColor">#90a4ae</color>
-    <color name="secondaryLightColor">#EBF7FF</color>
+    <color name="secondaryLightColor">#F5FBFF</color>
     <color name="secondaryDarkColor">#62757f</color>
 
     <color name="secondaryTextColor">#BF000000</color>
 
-    <color name="secondaryBackgroundColor">#D2E0E8</color>
+    <color name="secondaryBackgroundColor">#EBF7FF</color>
 
 </resources>
