--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -14,6 +14,8 @@
         <!-- Customize your theme here. -->
         <item name="android:navigationBarColor">@color/secondaryDarkColor</item>
         <item name="android:windowBackground">@color/secondaryBackgroundColor</item>
+        <item name="android:textColorHighlight">@color/secondaryTextColorHighlight</item>
+        <item name="android:textCursorDrawable">@drawable/cursor</item>
         <item name="attrFfView">@style/ff_view_style.dark_theme</item>
         <item name="attrFfCv">@style/ff_cv_style.dark_theme</item>
         <item name="attrFfTil">@style/ff_til_style.dark_theme</item>
