--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -12,6 +12,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="android:windowLightStatusBar">false</item>
         <item name="android:navigationBarColor">@color/secondaryDarkColor</item>
         <item name="android:windowBackground">@color/secondaryBackgroundColor</item>
         <item name="android:textColorHighlight">@color/secondaryTextColorHighlight</item>
