--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -17,6 +17,7 @@
 
     <color name="secondaryTextColor">#BFFFFFFF</color>
     <color name="secondaryTextColorHighlight">#8061BE9D</color>
+    <color name="secondaryTextSelectHandle">#61BE9D</color>
 
     <color name="secondaryBackgroundColor">#121517</color>
 
