--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
 
     <color name="secondaryTextColor">#BF000000</color>
     <color name="secondaryTextColorHighlight">#8061BE9D</color>
+    <color name="secondaryTextSelectHandle">#61BE9D</color>
 
     <color name="secondaryBackgroundColor">#EBF7FF</color>
 
