--- a/app/src/main/res/layout/ff_item.xml
+++ b/app/src/main/res/layout/ff_item.xml
@@ -2,16 +2,30 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    style="?attrFfItemCv"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    style="?attrFfItemCv"
     app:cardUseCompatPadding="true">
 
-    <TextView
-        android:id="@+id/ff_item_tv"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        style="?attrFfItemTv"
-        tools:text="Test text" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/ff_item_tv_translate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            style="?attr/attrFfItemTvTranslate"
+            tools:text="Test text" />
+
+        <TextView
+            android:id="@+id/ff_item_tv_note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            tools:text="asdasf"
+            android:visibility="gone"/>
+    </LinearLayout>
 
 </androidx.cardview.widget.CardView>
