--- a/app/src/main/res/layout/fragment_first.xml
+++ b/app/src/main/res/layout/fragment_first.xml
@@ -8,11 +8,11 @@
     tools:context=".presentation.firstfragment.FirstFragment">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/ff_cv"
-        style="?attrFfCv"
+        android:id="@+id/ff_cv_input"
+        style="?attr/attrFfCvInput"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/ff_rv"
+        app:layout_constraintBottom_toTopOf="@id/ff_cv_response"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -33,6 +33,23 @@
 
     </androidx.cardview.widget.CardView>
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/ff_cv_response"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/ff_rv"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/ff_cv_input">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="start"
+            tools:text="QWERTY" />
+    </androidx.cardview.widget.CardView>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/ff_rv"
         android:layout_width="match_parent"
@@ -41,7 +58,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/ff_cv"
+        app:layout_constraintTop_toBottomOf="@id/ff_cv_response"
         app:layout_constraintVertical_chainStyle="packed"
         tools:listitem="@layout/ff_item" />
 
@@ -51,9 +68,9 @@
         android:layout_height="0dp"
         android:src="@drawable/loading_animation"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/ff_rv"
+        app:layout_constraintEnd_toEndOf="@id/ff_rv"
+        app:layout_constraintStart_toStartOf="@id/ff_rv"
         app:layout_constraintTop_toTopOf="@id/ff_rv"
         tools:visibility="visible" />
 
