--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -5,7 +5,7 @@
         <item name="android:background">@color/secondaryBackgroundColor</item>
     </style>
 
-    <style name="ff_cv_style.dark_theme">
+    <style name="ff_cv_input_style.dark_theme">
         <item name="android:backgroundTint">@color/secondaryLightColor</item>
     </style>
 
@@ -27,7 +27,7 @@
         <item name="android:backgroundTint">@color/secondaryLightColor</item>
     </style>
 
-    <style name="ff_item_tv_style.dark_theme">
+    <style name="ff_item_tv_translate_style.dark_theme">
         <item name="android:textColor">@color/secondaryTextColor</item>
     </style>
 
