--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -18,10 +18,10 @@
         <item name="android:textColorHighlight">@color/secondaryTextColorHighlight</item>
         <item name="android:textCursorDrawable">@drawable/cursor</item>
         <item name="attrFfView">@style/ff_view_style.dark_theme</item>
-        <item name="attrFfCv">@style/ff_cv_style.dark_theme</item>
+        <item name="attrFfCvInput">@style/ff_cv_input_style.dark_theme</item>
         <item name="attrFfTil">@style/ff_til_style.dark_theme</item>
         <item name="attrFfTiet">@style/ff_tiet_style.dark_theme</item>
         <item name="attrFfItemCv">@style/ff_item_cv_style.dark_theme</item>
-        <item name="attrFfItemTv">@style/ff_item_tv_style.dark_theme</item>
+        <item name="attrFfItemTvTranslate">@style/ff_item_tv_translate_style.dark_theme</item>
     </style>
 </resources>
