--- a/app/src/main/res/values/attr.xml
+++ b/app/src/main/res/values/attr.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <attr name="attrFfView" format="reference"/>
-    <attr name="attrFfCv" format="reference"/>
+    <attr name="attrFfCvInput" format="reference"/>
     <attr name="attrFfTil" format="reference"/>
     <attr name="attrFfTiet" format="reference"/>
     <attr name="attrFfItemCv" format="reference"/>
-    <attr name="attrFfItemTv" format="reference"/>
+    <attr name="attrFfItemTvTranslate" format="reference"/>
 </resources>
