--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,7 +6,7 @@
         <item name="android:padding">@dimen/ff_constraint_layout_padding</item>
     </style>
 
-    <style name="ff_cv_style" parent="">
+    <style name="ff_cv_input_style" parent="">
         <item name="android:backgroundTint">@color/secondaryLightColor</item>
         <item name="android:elevation">@dimen/ff_cv_elevation</item>
         <item name="cardCornerRadius">@dimen/ff_cv_card_corner_radius</item>
@@ -47,8 +47,7 @@
         <item name="cardCornerRadius">@dimen/ff_item_card_corner_radius</item>
     </style>
 
-    <style name="ff_item_tv_style" parent="">
-        <item name="android:layout_gravity">start</item>
+    <style name="ff_item_tv_translate_style" parent="">
         <item name="android:layout_margin">@dimen/ff_item_tv_margin</item>
         <item name="android:textColor">@color/secondaryTextColor</item>
         <item name="android:textSize">@dimen/ff_item_tv_text_size</item>
